# ClutterStock

./: .git-blame-ignore-revs  .gitignore  .grype.yaml  CLAUDE.md  README.md  docker-compose.e2e.yml
.github/: dependabot.yml  labeler.yml
.github/scripts/: render_project_docs.py
.github/workflows/: api-container.yml  api-docs-pages.yml  backend-ci.yml  backend-container.yml  ci.yml  contracts-nuget-publish.yml  dependabot-update-dotnet-lockfiles.yml  frontend-ci.yml  frontend-container.yml  load-test.yml  migrator-container.yml  nightly-e2e.yml  poutine.yml  pr-e2e.yml  pr-preview-cleanup.yml  prune-ghcr.yml  resharper-cleanupcode.yml  schemaspy-artifact-test.yml  stryker.yml  tag-and-release.yml  zap-scan.yml
.zap/: rules.tsv
backend/: .gitignore  CluterStock.slnx  ClutterStock.slnx  Directory.Build.props
backend/.config/: dotnet-tools.json
backend/tests/: Directory.Build.props  testconfig.json
docs/: er-diagram.md
frontend/: .env  .env.test.sample  .gitignore  Dockerfile  README.md  allurerc.mjs  eslint.config.js  package-lock.json  package.json  playwright.config.ts  stryker.config.mjs  tsconfig.json  vite.config.ts
frontend/app/: STRUCTURE.md  app.css  entry.client.tsx  entry.server.tsx  public-runtime-config.ts  root.tsx  routes.ts  vite-env.d.ts
notepad/: README.md
notepad/src-tauri/: Cargo.toml  tauri.conf.json
notepad/src-tauri/src/: main.rs
scripts/: allure-history.Dockerfile  allure-report.Dockerfile  badges-e2e.Dockerfile  e2e-up.sh  monocart-coverage.Dockerfile  monocart-report.Dockerfile  zap-report.Dockerfile
(+297 files in other folders)
